--- a/index.html
+++ b/index.html
@@ -14,36 +14,36 @@
   <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
   <h1>I'm Sushil</h1>
   <h2>A Programmer.</h2>
+  <img class="middle-cloud" src="images/cloud.png" alt="cloud-img">
   <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-  <img src="images/mountain.png" alt="mountain-img">
 </div>
 
 <div class="middle-container">
   <div class="profile">
     <img src="images/PFP.png" alt="profile-pic">
-    <h2>Hello.</h2>
-    <p>Hi, I'm a Web developer. Passionate about web designing. Love to read.</p>
+    <h2>Hi</h2>
+    <p class="style">I'm a Web developer. Passionate about web designing. Love to read.</p>
   </div>
   <hr>
   <div class="skills">
-    <h2>My Skills.</h2>
+    <h2>My Skills</h2>
     <div class="skill-row">
       <img class="code-img" src="images/code.png" alt="Icon made by Eucalyp from Flaticon.com">
       <h3>Design & Developer</h3>
-      <p>Love Programming. Been at it for some years. Like to keep it simple and unique. Something that represents your interests. Conveying your ideas or message you want to send.</p>
+      <p class="style">Love Programming. Been at it for some years. Like to keep it simple and unique. Something that represents your interests. Conveying your ideas or message you want to send.</p>
     </div>
-    <hr style="border-style: none; border-top-style: dotted; border-color: grey; border-width: 4px; width: 5%;">
+    <hr>
     <div class="skill-row">
       <img class="game-img" src="images/gamer.png" alt="Icon by Freepik.com from flaticon.com">
       <h3>Gamer</h3>
-      <p>My best skill is gaming. Medal of Honor: Warfighter and Assasin's creed are my fav games.</p>
+      <p class="style">My best skill is gaming. Medal of Honor: Warfighter and Assasin's creed are my fav games.</p>
     </div>
   </div>
   <hr>
   <div class="contact-me">
     <h2>Get In Touch</h2>
     <h3>If you love FPS as much as I do.</h3>
-    <p>Let's talk about games, how awesome they are and they don't make us Violent!! We can code while we are at it.</p>
+    <p class="outro">Let's talk about games, how awesome they are and they don't make us Violent!! We can code while we are at it.</p>
     <a class="btn" href="mailto:kjhonnyalive@gmail.com">CONTACT ME</a>
   </div>
 </div>
@@ -53,7 +53,7 @@
   <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
   <a class="footer-link" href="https://twitter.com/">Twitter</a>
   <a class="footer-link" href="https://sushilk93.github.io/cv/">Website</a>
-  <p>© 2020 Sushil Kumar</p>
+  <p class="footer-txt">© 2020 Sushil Kumar</p>
 </div>
 
   </body>
