--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="profile">
     <img src="images/PFP.png" alt="profile-pic">
     <h2>Hi</h2>
-    <p class="style">I'm a Web developer. Passionate about web designing. Love to read.</p>
+    <p class="intro">I'm a Web developer. Passionate about web designing. Love to read.</p>
   </div>
   <hr>
   <div class="skills">
